# unofficial-openai-tts-cli

./: .gitignore  README.md  pyproject.toml  tts_openai_cli_script.py
